--- a/package.json
+++ b/package.json
@@ -40,10 +40,13 @@
     "lodash": "^4.17.15",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
+    "nodemon": "^2.0.4",
+    "pg": "^8.2.1",
     "prettier": "^2.0.5",
     "ts-jest": "^26.1.0",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.49",
+    "typeorm": "^0.2.25",
     "typescript": "^3.9.5"
   },
   "scripts": {
