--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,9 @@
                 "node_modules/",
                 "src/types/*"
             ]
-        }
+        },
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
     },
     "include": [
         "src/**/*"
