--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "MIT",
   "dependencies": {
     "@koa/cors": "^3.1.0",
+    "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-compress": "^4.0.0",
@@ -20,9 +22,11 @@
     "@types/moment-timezone": "^0.5.13",
     "@types/node": "^14.0.13",
     "@types/nodemon": "^1.19.0",
+    "@types/uuid": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
     "axios": "^0.19.2",
+    "bcrypt": "^5.0.0",
     "codecov": "^3.7.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.3.0",
@@ -30,6 +34,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.12.1",
     "koa-bodyparser": "^4.3.0",
     "koa-compress": "^4.0.1",
@@ -47,7 +52,8 @@
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.49",
     "typeorm": "^0.2.25",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.5",
+    "uuid": "^8.1.0"
   },
   "scripts": {
     "dev": "NODE_ENV=development ts-node-dev ./src/server.ts",
