--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.12.1",
     "koa-bodyparser": "^4.3.0",
+    "koa-combine-routers": "^4.0.2",
     "koa-compress": "^4.0.1",
     "koa-helmet": "^5.2.0",
     "koa-json": "^2.0.2",
