--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,11 @@ services:
   db:
     container_name: postgres
     image: postgres:12.1
+    volumes:
+      - ./src/db/schema.sql:/docker-entrypoint-initdb.d/dump.sql
     ports:
       - 5432:5432
+    environment:
+      POSTGRES_USER: donaldwu
+      POSTGRES_PASSWORD: donaldwu
+      POSTGRES_DB: donaldwu
