--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "@koa/cors": "^3.1.0",
+    "@prisma/cli": "^2.1.3",
+    "@prisma/client": "^2.1.3",
     "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.0",
     "@types/jsonwebtoken": "^8.5.0",
@@ -52,7 +54,6 @@
     "ts-jest": "^26.1.0",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.49",
-    "typeorm": "^0.2.25",
     "typescript": "^3.9.5",
     "uuid": "^8.1.0"
   },
