--- a/package.json
+++ b/package.json
@@ -61,12 +61,14 @@
     "dev": "NODE_ENV=development ts-node-dev ./src/app.ts",
     "start": "rm -rf dist && tsc && NODE_ENV=production nodemon ./dist/app.js",
     "test": "jest --detectOpenHandles",
-    "lint": "eslint '*/**/*.{ts,tsx}' --quiet --fix"
+    "lint": "eslint '*/**/*.{ts,tsx}' --quiet --fix",
+    "generate:prisma": "cd ./prisma && npx prisma introspect && npx prisma generate",
+    "format:prisma": "cd ./prisma && npx prisma format"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint",
-      "pre-push": "yarn lint"
+      "pre-commit": "yarn lint && yarn run format:prisma",
+      "pre-push": "yarn lint && yarn run format:prisma"
     }
   }
 }
