--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "@koa/cors": "^3.1.0",
-    "@prisma/cli": "^2.4.1",
-    "@prisma/client": "^2.4.1",
+    "@prisma/cli": "^2.5.0",
+    "@prisma/client": "^2.5.0",
     "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.0",
     "@types/jsonwebtoken": "^8.5.0",
@@ -34,6 +34,7 @@
     "eslint": "^7.3.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "git-cz": "^4.7.0",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "jsonwebtoken": "^8.5.1",
@@ -62,7 +63,8 @@
     "test": "jest --detectOpenHandles",
     "lint": "eslint '*/**/*.{ts,tsx}' --quiet --fix",
     "generate:prisma": "cd ./prisma && npx prisma introspect && npx prisma generate",
-    "format:prisma": "cd ./prisma && npx prisma format"
+    "format:prisma": "cd ./prisma && npx prisma format",
+    "commit": "npx git-cz"
   },
   "husky": {
     "hooks": {
