--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "ts-jest": "^26.1.0",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0-pre.61",
-    "typescript": "^4.0.2",
+    "typescript": "3.9.7",
     "uuid": "^8.1.0"
   },
   "scripts": {
