--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "ts-jest": "^26.1.0",
-    "ts-node": "^9.0.0",
+    "ts-node": "8.10.2",
     "ts-node-dev": "^1.0.0-pre.61",
     "typescript": "3.9.7",
     "uuid": "^8.1.0"
