--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,12 @@ services:
       - /usr/src/app/node_modules
     ports:
       - 3000:3000
+    restart: always
     environment:
       - NODE_ENV=production
     depends_on:
       - db
+
   db:
     container_name: postgres
     image: postgres:12.1
@@ -26,3 +28,20 @@ services:
       POSTGRES_USER: donaldwu
       POSTGRES_PASSWORD: donaldwu
       POSTGRES_DB: donaldwu
+
+  prisma-studio:
+    container_name: prisma-studio
+    build:
+      context: .
+    command: yarn run prisma-studio
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+    ports:
+      - 5555:5555
+    restart: always
+    environment:
+      - NODE_ENV=production
+    depends_on:
+      - web
+      - db
