refactor: 💡 add devDependencies and update prisma lib

--- a/package.json
+++ b/package.json
@@ -1,14 +1,33 @@
 {
   "name": "dogApi",
-  "version": "0.3.7",
+  "version": "0.3.9",
   "main": "app.js",
   "repository": "https://github.com/yeukfei02/dogApi.git",
   "author": "Donald Wu <yeukfei02@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "@koa/cors": "^3.1.0",
-    "@prisma/cli": "^2.9.0",
-    "@prisma/client": "^2.9.0",
+    "@prisma/client": "^2.13.0",
+    "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "koa": "^2.12.1",
+    "koa-bodyparser": "^4.3.0",
+    "koa-combine-routers": "^4.0.2",
+    "koa-compress": "^4.0.1",
+    "koa-helmet": "^5.2.0",
+    "koa-json": "^2.0.2",
+    "koa-logger": "^3.2.1",
+    "koa-router": "^9.0.1",
+    "lodash": "^4.17.15",
+    "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
+    "nodemon": "^2.0.4",
+    "uuid": "^8.1.0"
+  },
+  "devDependencies": {
+    "@prisma/cli": "^2.13.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^26.0.0",
     "@types/jsonwebtoken": "^8.5.0",
@@ -27,36 +46,19 @@
     "@types/uuid": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
-    "axios": "^0.19.2",
-    "bcryptjs": "^2.4.3",
     "codecov": "^3.7.0",
-    "dotenv": "^8.2.0",
     "eslint": "^7.3.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "git-cz": "^4.7.0",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
-    "jsonwebtoken": "^8.5.1",
-    "koa": "^2.12.1",
-    "koa-bodyparser": "^4.3.0",
-    "koa-combine-routers": "^4.0.2",
-    "koa-compress": "^4.0.1",
-    "koa-helmet": "^5.2.0",
-    "koa-json": "^2.0.2",
-    "koa-logger": "^3.2.1",
-    "koa-router": "^9.0.1",
-    "lodash": "^4.17.15",
-    "moment": "^2.27.0",
-    "moment-timezone": "^0.5.31",
-    "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.1.0",
     "ts-node": "8.10.2",
     "ts-node-dev": "^1.0.0-pre.61",
-    "typescript": "3.9.7",
-    "uuid": "^8.1.0"
+    "typescript": "^4.1.2"
   },
   "scripts": {
     "dev": "NODE_ENV=development ts-node-dev ./src/app.ts",
@@ -65,10 +67,7 @@
     "lint": "eslint '*/**/*.{ts,tsx}' --quiet --fix",
     "generate:prisma": "cd ./prisma && npx prisma introspect && npx prisma generate",
     "format:prisma": "cd ./prisma && npx prisma format",
-    "migrate:prisma:create": "npx prisma migrate save --experimental",
-    "migrate:prisma:up": "npx prisma migrate up --experimental",
-    "migrate:prisma:down": "npx prisma migrate down 1 --experimental",
-    "prisma-studio": "npx prisma studio --experimental",
+    "prisma-studio": "npx prisma studio",
     "commit": "npx git-cz",
     "release": "standard-version"
   },
