--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
+    "rimraf": "^3.0.2",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.1.0",
     "ts-node": "8.10.2",
@@ -62,13 +63,14 @@
   },
   "scripts": {
     "dev": "NODE_ENV=development ts-node-dev ./src/app.ts",
-    "start": "rm -rf dist && tsc && NODE_ENV=production nodemon ./dist/app.js",
+    "start": "NODE_ENV=production nodemon ./dist/app.js",
+    "build": "rimraf dist && tsc",
     "test": "jest --detectOpenHandles",
     "lint": "eslint '*/**/*.{ts,tsx}' --quiet --fix",
-    "generate:prisma": "cd ./prisma && npx prisma introspect && npx prisma generate",
-    "format:prisma": "cd ./prisma && npx prisma format",
+    "generate:prisma": "npx prisma introspect && npx prisma generate",
+    "format:prisma": "npx prisma format",
     "prisma-studio": "npx prisma studio",
-    "commit": "npx git-cz",
+    "commit": "git-cz",
     "release": "standard-version"
   },
   "husky": {
