--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     container_name: prisma-studio
     build:
       context: .
-    command: yarn run prisma-studio
+    command: yarn run prisma:studio
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
