--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "@koa/cors": "^3.1.0",
-    "@prisma/client": "^2.15.0",
+    "@prisma/client": "^3.8.1",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
@@ -23,13 +23,11 @@
     "lodash": "^4.17.15",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
-    "nodemon": "^2.0.4",
     "uuid": "^8.1.0"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.15.0",
     "@types/bcryptjs": "^2.4.2",
-    "@types/jest": "^26.0.0",
+    "@types/jest": "^27.4.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
@@ -41,42 +39,50 @@
     "@types/koa__cors": "^3.0.1",
     "@types/lodash": "^4.14.155",
     "@types/moment-timezone": "^0.5.13",
-    "@types/node": "^14.0.13",
-    "@types/nodemon": "^1.19.0",
+    "@types/node": "^17.0.9",
     "@types/uuid": "^8.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "codecov": "^3.7.0",
-    "eslint": "^7.3.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
     "git-cz": "^4.7.0",
     "husky": "^4.2.5",
-    "jest": "^26.0.1",
-    "prettier": "^2.0.5",
+    "jest": "^27.4.7",
+    "prettier": "^2.5.1",
+    "prisma": "^3.8.1",
     "rimraf": "^3.0.2",
     "standard-version": "^9.0.0",
-    "ts-jest": "^26.1.0",
-    "ts-node": "8.10.2",
-    "ts-node-dev": "^1.0.0-pre.61",
-    "typescript": "^4.1.2"
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.4.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.4"
   },
   "scripts": {
     "dev": "NODE_ENV=development ts-node-dev ./src/app.ts",
-    "start": "NODE_ENV=production nodemon ./dist/app.js",
+    "start": "NODE_ENV=production node ./dist/app.js",
     "build": "rimraf dist && tsc",
     "test": "jest --detectOpenHandles",
     "lint": "eslint '*/**/*.{ts,tsx}' --quiet --fix",
-    "generate:prisma": "npx prisma introspect && npx prisma generate",
-    "format:prisma": "npx prisma format",
-    "prisma-studio": "npx prisma studio",
+    "prisma:generate": "npx prisma db pull && npx prisma generate",
+    "prisma:migrate:dev": "npx prisma migrate dev",
+    "prisma:migrate:reset": "npx prisma migrate reset",
+    "prisma:migrate:deploy": "npx prisma migrate deploy",
+    "prisma:migrate:status": "npx prisma migrate status",
+    "prisma:db:push": "npx prisma db push",
+    "prisma:db:seed": "npx prisma db seed",
+    "prisma:format": "npx prisma format",
+    "prisma:studio": "npx prisma studio",
     "commit": "git-cz",
     "release": "standard-version"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint && yarn run format:prisma",
-      "pre-push": "yarn lint && yarn run format:prisma"
+      "pre-commit": "yarn lint && yarn run prisma:format",
+      "pre-push": "yarn lint && yarn run prisma:format"
     }
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
